{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "f50338ed-6c99-4a97-810f-e382873913df",
            "actions": [
                {
                    "name": "ClickMove",
                    "type": "Button",
                    "id": "fef6c6af-877d-4aa1-a542-1af0618e4bd1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SaveCommandLoad",
                    "type": "Button",
                    "id": "c3d18b15-6144-44fd-8668-eebeb49ddd82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SaveCommandSave",
                    "type": "Button",
                    "id": "5b31eb31-1485-4f85-9391-3ef875e66cf0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeleteSaveFile",
                    "type": "Button",
                    "id": "a11f4728-8624-4a1e-ba7c-d488b8bc09b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "30c0311d-f17b-4664-aa02-8c635a49686e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e0e5d99-2a49-4ad2-bae7-0893608438af",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SaveCommandLoad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2229d698-c457-4591-bdd6-7a4cc7387311",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SaveCommandSave",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bed73fd-b750-4953-aac5-9eba168f527b",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteSaveFile",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}